[package]
authors = ["ysouyno <ysouyno@163.com>"]
edition = "2018"
name = "isbld-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
